# fastapi-celery-example

./: README.md  config.py  main.py  pyproject.toml  test.py
celery_app/: __init__.py  tasks.py
models/: item.py
