[tool.poetry]
name = "fastapi-celery-example"
version = "0.1.0"
description = ""
authors = ["little7Li <little7xiaoqi@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
celery = "^5.0.5"
uvicorn = "^0.13.3"
redis = "^3.5.3"
pandas = "^1.4.2"
poetry-lock-package = "^0.4.4"

[tool.poetry.dev-dependencies]
unittest = "^0.0"
poetry-lock-package = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
